# tarefa-freertos-2-antonio-almeida

./: CMakeLists.txt  README.md
include/: oled_setup.h
src/: oled_setup.c  picow_freertos_ping_ac.c  ping.c
